Fix proble with header not showing

--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -17,7 +17,7 @@ a {
   color: var(--blue-darker);
 }
 
-.main {
+.container {
   min-height: 100vh;
   display: flex;
   overflow: auto;
